--- a/.github/workflows/Test Coverage.yml
+++ b/.github/workflows/Test Coverage.yml
@@ -31,19 +31,8 @@ jobs:
         with:
           coveralls-token: ${{ secrets.COVERALLS_TOKEN }}
 
-      - name: Coveralls upload
-        uses: coverallsapp/github-action@master
+      - name: Codecov upload
+        uses: codecov/codecov-action@v3
         with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          parallel: true
-          path-to-lcov: ${{ steps.coverage.outputs.report }}
-
-  grcov_finalize:
-    runs-on: ubuntu-latest
-    needs: grcov
-    steps:
-      - name: Coveralls finalization
-        uses: coverallsapp/github-action@master
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          parallel-finished: true
+          files: ${{ steps.coverage.outputs.report }}
+          fail_ci_if_error: true
