--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,8 +3,8 @@ name = "squeak"
 version = "0.1.0"
 description = "Library providing types allowing execution of callbacks in response to values being broadcast or mutated."
 authors = ["Antoine Gersant <antoine.gersant@lesforges.org>"]
-keywords = ["observable", "delegate", "event", "reactive"]
-categories = ["rust-patterns", "data-structures"]
+keywords = ["observable", "delegate", "event", "reactive", "no_std"]
+categories = ["rust-patterns", "data-structures", "no-std"]
 repository = "https://github.com/agersant/squeak"
 license = "MIT OR Apache-2.0"
 edition = "2021"
